--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Django==1.11.28
-psycopg2==2.7.2
+Django==4.1.3
 dj-database-url==0.4.1
 gunicorn==19.6.0
 
-Pillow==3.3.0
+Pillow==9.3.0
 tinify==1.3.0
+mysqlclient==2.1.1
 
 factory-boy==2.7.0
   fake-factory==0.7.2
